created keys to authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 # Configuration file
 # key = value
+mp.jwt.verify.publickey.location=publickey.pem
+mp.jwt.verify.issuer=https://quarkus.io/using-jwt-rbac
+quarkus.smallrye-jwt.enabled=true
+
+br.com.linoz.user-prev.jwt.duration =3360
+
+br.com.linoz.user-prev.password.secret=ninasecretpassword
+br.com.linoz.user-prev.password.iteration=33
+br.com.linoz.user-prev.password.keylength=256
+
+quarkus.log.file.enable=true
+quarkus.log.file.path=/tmp/error.log
+quarkus.log.file.level=ERROR
+quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
